tests/sksl/errors/CanExitWithoutReturningValue.glsl
### Compilation failed:

error: 3: function 'not_detected' can exit without returning a value
error: 4: function 'is_detected' can exit without returning a value
2 errors
